fruits/ab-deployment/banana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tomcat-deployment-nautilus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: tomcat
  template:
    metadata:
      labels:
        app: tomcat
    spec:
      containers:
        - name: tomcat-container-nautilus
          image: gcr.io/kodekloud/centos-ssh-enabled:tomcat
          ports:
            - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: tomcat-service-nautilus
spec:
  type: NodePort
  selector:
    app: tomcat
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
  type: loadBalancer
