fruits/ab-deployment/ab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: "/nginx"
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80

          - path: "/tomcat"
            pathType: Prefix
            backend:
              service:
                name: tomcat-service
                port:
                  number: 80
